--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/NikoKoskinen/node-harjoitus#readme",
   "dependencies": {
+    "camaro": "^6.2.1",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
     "mathjs": "^11.11.2",
